[package]
name = "ctrld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
pid = { git = "https://github.com/braincore/pid-rs" }
serde = { version = "1", features = ["derive"] }
